--- a/index.html
+++ b/index.html
@@ -1,9 +1,183 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>我的作品</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--viewport 设置 -->
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/jquery.nav.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#nav').onePageNav();
+            $('#nav_col').onePageNav();
+        });
+    </script>
+
 </head>
 <body>
- This is my 作品 ！
+
+<header>
+    <div class="layout">
+        <a href="#" class="blog_link">MyBlog</a>
+        <ul class="nav" id="nav">
+            <!--<li><a href="#section01">关于我</a></li>-->
+            <li><a href="#section02">专业技能</a></li>
+            <li><a href="#section03">个人履历</a></li>
+            <li><a href="#section04">作品集</a></li>
+            <li><a href="#section05">联系我</a></li>
+        </ul>
+        <a class="nav_bar" href="javascript:;">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+        <ul class="nav_col" id="nav_col">
+            <li><a href="#section02">专业技能</a></li>
+            <li><a href="#section03">个人履历</a></li>
+            <li><a href="#section04">作品集</a></li>
+            <li><a href="#section05">联系我</a></li>
+        </ul>
+
+    </div>
+</header>
+<section id="section01" class="about wow fadeInUp">
+    <div class="photo"><img src="images/myphoto.jpg"/></div>
+    <div class="my_intro">
+        <h2> Hi,我是许文泽<br/>
+            一名前端开发工程师</h2>
+        <p>坐标：北京<br/>
+            求职意向：web前端开发<br/>
+            年龄：23岁&nbsp;&nbsp;&nbsp;&nbsp;工作经验：1年<br/>
+            联系我： <a href="#">myname@163.com</a>
+        </p>
+    </div>
+
+
+</section>
+<section id="section02">
+    <div class="title wow fadeInUp" data-wow-delay="0.5s">
+        <h3>专业技能</h3>
+        <p>精通前端，涉略后端、超强学习能力</p>
+    </div>
+    <div class="layout wow fadeInUp" data-wow-delay="0.5s">
+        <ul class="clearfix skills">
+            <li>
+                <img src="images/web.png"/>
+                <dl>
+                    <dt>PS基础</dt>
+                    <dd>具有独立分析和较好的沟通能力，较强的产品意识和逻辑思维能力，熟练使用ps,能够完成常规切图、修图工作，图片优化工作 </dd>
+                </dl>
+            </li>
+            <li>
+                <img src="images/web.png"/>
+                <dl>
+                    <dt>网页制作</dt>
+                    <dd>精通HTML和CSS，擅长页面布局制作符合标准的HTML页面（pc、移动、H5）， 熟悉浏览器兼容及相关解决方案,通过js，jquery改变静态布局效果增强用户体验</dd>
+                </dl>
+            </li>
+            <li>
+                <img src="images/web.png"/>
+                <dl>
+                    <dt>其他</dt>
+                    <dd>熟悉模块化(MVVM) vue.js 开发模式，熟悉bootstrap、mui框架流行框架; 了解AngularJS，RequireJS，Less，自动化流程gulp等技术,了解php后端开发技术。</dd>
+                </dl>
+            </li>
+        </ul>
+    </div>
+
+</section>
+<section id="section03">
+    <div class="title wow fadeInUp" data-wow-delay="0.5s">
+        <h3>个人履历</h3>
+        <p>路漫漫其修远兮，吾将上下而求索</p>
+    </div>
+    <div class="layout record_list">
+        <dl class="record_item wow fadeInUp" data-wow-delay="1s">
+            <dt>2017/07 – 2018/12</dt>
+            <dd class="record_bd">
+                <strong>通联支付网络服务股份有限公司</strong>
+                <em>金融服务事业部 | 前端开发</em>
+                <p>负责网站页面设计、制作，flash动画以及与动态效果的实现。 涉及到的项目有：奉贤农业园区官网、上海招商网、松江招商网、宝山招商网、上海宏城发展有限公司官网、金山U谷官网、天裁秀商城等。</p>
+            </dd>
+        </dl>
+        <dl class="record_item wow fadeInUp" data-wow-delay="1.5s">
+            <dt>2019/02 – 至今</dt>
+            <dd class="record_bd">
+                <strong>优车惠文化传媒有限公司</strong>
+                <em>开发部 | 前端开发</em>
+                <p>负责网站页面设计、制作，flash动画以及与动态效果的实现。 </p>
+            </dd>
+        </dl>
+       
+
+    </div>
+    </div>
+</section>
+<section id="section04">
+    <div class="title wow fadeInUp" data-wow-delay="0.5">
+        <h3>部分作品</h3>
+        <p>理论所不能解决的那些疑难，实践会给你解决。</p>
+    </div>
+    <div class="layout">
+        <ul class="clearfix works">
+            <li class="wow fadeInUp" data-wow-delay="0.8">
+                <a href="#">
+                    <img src="images/works1.jpg"/>
+                    <p>作品1</p>
+                </a>
+            </li>
+            <li class="wow fadeInUp" data-wow-delay="1s">
+                <a href="#">
+                    <img src="images/works1.jpg"/>
+                    <p>作品1</p>
+                </a>
+            </li>
+            <li class="wow fadeInUp" data-wow-delay="1.2s">
+                <a href="#">
+                    <img src="images/works1.jpg"/>
+                    <p>作品1</p>
+                </a>
+            </li>
+            <li class="wow fadeInUp" data-wow-delay="2s">
+                <a href="#">
+                    <img src="images/works1.jpg"/>
+                    <p>作品1</p>
+                </a>
+            </li>
+        </ul>
+    </div>
+</section>
+<section id="section05"  class="wow flipInX" data-wow-delay="1s">
+    <div class="layout">
+        <div class="title">
+            <h3>联系我</h3>
+            <p>如果您觉得我还靠谱，就请使用以下的联系方式联系我吧！</p>
+        </div>
+        <address class="contact">
+            <p>姓名：许文泽</p>
+            <p><img src="images/phone_ico.jpg" alt=""  class="wow tada" data-wow-iteration="infinite" >175 6275 0923</p>
+            <p><img src="images/mail_ico.jpg" alt="" >stevex@163.com</p>
+            <p>地址：北京市 昌平区 </p>
+
+            <p class="wow pulse" data-wow-iteration="infinite" data-wow-duration="3s">
+                行路有良友，便是捷径<br/>
+                期待有机会与您共事！
+            </p>
+        </address>
+    </div>
+
+
+</section>
+
+<script src="js/wow.min.js"></script>
+<script>
+    new WOW().init();
+
+</script>
+
 </body>
 </html>
