--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>steveXu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--viewport 设置 -->
     <link rel="stylesheet" href="css/reset.css">
