--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>steveXu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--viewport 设置 -->
+    <link rel="icon" href="images/xu.ico" type="image/x-icon"/>  
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.min.css">
